[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/ufo-16.png" type="Texture" id=1]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.47765, 5.02196 )

[node name="Enemy" type="Area2D"]
collision_layer = 16
collision_mask = 10
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true

[node name="Hook" type="Node2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
